Added npm packages. Removed Jquery plugin. Redsigned the Project card.

--- a/public/index.html
+++ b/public/index.html
@@ -1,11 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <link rel="icon" href="<%= BASE_URL %>favicon.ico">
-    <title><%= htmlWebpackPlugin.options.title %></title>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+    <title>Portfolio | Sagar Sutar</title>
+    <link rel="icon" href="assets/img/logo/terminal-sign.webp" type="image/icon" />
+
+    <meta name="title" content="Portfolio - Sagar Sutar" />
+    <meta name="description" content="Sagar Sutar is a Full Stack Web Developer who has worked on MEVN stack." />
+    <meta
+      name="keywords"
+      content="full stack, web developer,  
+        application development, android , linux, iot, aws ,
+        java, python, bootstrap, javascript, css3, cloud computing, servlets, mongo db"
+    />
+    <meta name="robots" content="index, follow" />
+    <meta name="language" content="English" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat|Raleway|Poppins:400,600,900&display=swap" />
+    
   </head>
   <body>
     <noscript>
@@ -13,5 +26,11 @@
     </noscript>
     <div id="app"></div>
     <!-- built files will be auto injected -->
+
+  
+    <script type="text/javascript" src="https://kit.fontawesome.com/d3ee46ec60.js"></script>
+    <!-- <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery.lazy/1.7.9/jquery.lazy.min.js"></script>
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery.lazy/1.7.9/jquery.lazy.plugins.min.js"></script>
+    -->
   </body>
 </html>
