Updated landing page image. Added About me.

--- a/public/index.html
+++ b/public/index.html
@@ -17,16 +17,16 @@
     <meta name="robots" content="index, follow" />
     <meta name="language" content="English" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link href="https://fonts.googleapis.com/css2?family=Bodoni+Moda&display=swap" rel="stylesheet" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat|Raleway|Poppins:400,600,900&display=swap" />
-    
   </head>
   <body>
     <noscript>
       <strong>We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
     </noscript>
     <div id="app"></div>
-  
+
     <script type="text/javascript" src="https://kit.fontawesome.com/d3ee46ec60.js"></script>
-   
   </body>
 </html>
