--- a/public/index.html
+++ b/public/index.html
@@ -28,5 +28,8 @@
     <div id="app"></div>
 
     <script type="text/javascript" src="https://kit.fontawesome.com/d3ee46ec60.js"></script>
+    <script src="/__/firebase/7.6.2/firebase-app.js"></script>
+    <script src="/__/firebase/7.6.2/firebase-analytics.js"></script>
+    <script src="/__/firebase/init.js"></script>
   </body>
 </html>
