Fixed picture backgrounds. Changed footer. Added version old page.

--- a/public/index.html
+++ b/public/index.html
@@ -18,8 +18,8 @@
     <meta name="language" content="English" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="preconnect" href="https://fonts.gstatic.com" />
-    <link href="https://fonts.googleapis.com/css2?family=Bodoni+Moda&display=swap" rel="stylesheet" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat|Raleway|Poppins:400,600,900&display=swap" />
+    <link rel="icon" sizes="192x192" href="./terminal-sign.ico" />
   </head>
   <body>
     <noscript>
