Updated version dropdown list.

--- a/public/v1.html
+++ b/public/v1.html
@@ -78,6 +78,7 @@
                   <a class="dropdown-item bg-secondary" href="v1.html">v1</a>
                   <a class="dropdown-item" href="v2.html">v2</a>
                   <a class="dropdown-item" href="v3.html">v3</a>
+                  <a class="dropdown-item" href="index.html">v4</a>
                 </ul>
               </div>
             </li>
